fix(analytics): scope analytics to the owning user and require JWT auth
The summary endpoint was unauthenticated and counted every user clicks. It now requires the Bearer JWT issued by the user service, and every query filters on owner_id taken from the verified token.

Also: store click times in UTC and stop @CreationTimestamp from overwriting the real click time, compute time windows in Java instead of DB now(), zero-fill the 48h hourly series, expose the ISO country code, and replace the misleading today/this-week fields with clicksLastMinute, clicksLast24h and clicksLast7Days.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>